--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,21 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+/* 1200px */
+/* @media (min-width: 1200px) {
+  body {
+    display: flex;
+    justify-content: center;
+  }
+} */
+
+.content-container {
+  max-width: 1920px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -18,12 +32,11 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: var(--scroll-padding, 5rem);
 }
 
 @layer utilities {
