feat: 팀 소개서 - 연혁 valdidation 추가 & select 스타일 바꿈

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,11 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
+input::-webkit-inner-spin-button {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
 
 /* 1200px */
 /* @media (min-width: 1200px) {
