--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,11 @@ html {
     }
   }
 }
+
+/* 모바일 화면 스크롤바 숨기기 */
+@media (max-width: 767px) {
+  /* md 이하의 화면 크기 */
+  body {
+    overflow: hidden; /* 스크롤바 숨기기 */
+  }
+}
